# FAISS-RAG

./: .env.nano  .gitignore  .nano_tenant  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  KEYCLOAK_SETUP_README.md  KEYCLOAK_TEST_USERS.md  NANO_BANANA_FIXES.md  NANO_MCP_USAGE.md  README.md  SECURITY_COMPLIANCE.md  alembic.ini  backend.env  bmm-workflow-status.md  generate_flying_pigs_image.md  nano_response_debug.txt  nano_tenant_config.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  README.md  post-create.sh
_bmad/: ARCHITECTURE_ANALYSIS.md
_bmad-output/: party-mode-session.md
_bmad-output/implementation-artifacts/: 1-1-project-structure-and-development-environment-setup.md  1-10-error-handling-framework.md  1-11-health-check-endpoints.md  1-12-basic-backup-operations.md  1-13-observability-integration-langfuse.md  1-5-authentication-middleware.md  (+32 more)
app/: main.py
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: analytics.py  auth.py  documents.py  health.py  tenants.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/services/: mcp_client.py
docker/: DOCKER_TEST_RESULTS.md  docker-compose.yml
docs/: AUTHENTICATION_CONFIGURATION.md  AUTHORIZATION_CONFIGURATION.md  BEHAVIORAL_RULES_SYNC_PROCESS.md  BMAD_DOCTRINE_NFR_UPDATE_COMPLETE.md  BMAD_MASTER_TASKS.md  BMAD_METHODOLOGY_FEEDBACK.md  COMPLETE_AGILE_WORKFLOW.md  DEPENDENCIES.md  DEPENDENCIES_SETUP_SUMMARY.md  DESIRED_OPENPROJECT_MCP_TOOLS.md  DEV_AGENT_INSTRUCTIONS.md  DEV_TESTING_RULE.md  EPIC_2_VERIFICATION.md  EPIC_3_COMPLETION_SUMMARY.md  EPIC_3_INTEGRATION_TESTS_COMPLETE.md  EPIC_3_VERIFICATION.md  EPIC_4_COMPLETION_SUMMARY.md  EPIC_4_INTEGRATION_TEST_FIXES.md  EPIC_4_TESTING_COMPLETE_SUMMARY.md  EPIC_4_TESTING_PRIORITY.md  EPIC_4_VERIFICATION.md  EPIC_5_CLOSURE_SUMMARY.md  EPIC_5_INTEGRATION_TESTS_CREATED.md  EPIC_5_PROCESS_COMPLIANCE_VERIFICATION.md  EPIC_5_REDIS_CONFIGURATION_COMPLETE.md  EPIC_5_VERIFICATION.md  EPIC_6_INTEGRATION_TESTS_COMPLETE.md  EPIC_AUDIT_COMPLETE_SUMMARY.md  EPIC_AUDIT_FINAL_SUMMARY.md  EPIC_STORY_DEPENDENCY_EVALUATION.md  EPIC_WORK_COMPLETE_SUMMARY.md  EPIC_WORK_FINAL_COMPLETE.md  EXTERNAL_DEPENDENCIES.md  GENIMAGE_DOCTRINE_UPDATE_COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_TEST_FIXES_COMPLETE.md  INTEGRATION_TEST_FIXES_COMPLETE_FINAL.md  INTEGRATION_TEST_REQUIREMENTS.md  INTEGRATION_TEST_STATUS_SUMMARY.md  KEYCLOAK_INTEGRATION.md  (+61 more)
frontend/: .eslintrc.json  env-example.txt  env.local  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: QUICK_START_OPENPROJECT.md  README_OPENPROJECT_SETUP.md  attach_epic3_docs.py  attach_story_verification_docs.py  attach_verification_docs.py  audit_epics_stories.py  backup.py  bmad-setup.py  check_existing_tasks.py  cleanup_old_openproject_structure.py  create_admin_ui_stories.py  create_all_missing_tasks.py  create_all_tasks_via_mcp.py  create_epic3_epic4_tasks.py  create_epic6_tasks.py  create_github_repo.sh  create_keycloak_test_users.py  create_missing_epics_stories_tasks.py  create_remaining_epic_tasks.py  create_tasks_from_stories.py  create_tasks_in_openproject.py  create_test_tenants.py  disable_profile_update_required_action.py  ensure_services_running.py  execute_migrations.sh  fix_and_update_openproject.py  force_kill_port_3001.sh  generate_image_genimage.py  generate_image_nano.py  generate_sprint_status_from_openproject.py  openproject_status_helpers.py  prepare-virgin-devcontainer.sh  register_nano_tenant.py  restart_frontend.sh  run_migrations.py  run_migrations_docker.sh  run_migrations_simple.py  run_migrations_via_container.sh  set_openproject_parents.py  setup_keycloak_client.py  (+15 more)
tests/: __init__.py  conftest.py  test_api_key_auth.py  test_auth_audit_logging.py  test_auth_middleware.py  test_authorization.py  test_oauth_auth.py  test_tenant_isolation.py  test_tool_discovery.py
(+309 files in other folders)
